--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
 	"author": "Stetson Wood",
-	"name": "weatherapp.stetsonwood",
-	"version": "0.0.3",
-	"description": "Find weather in Utah",
+	"name": "commentapp.stetsonwood",
+	"version": "0.0.1",
+	"description": "Save Comment to MongoDB",
 	"main": "server",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/AxothAcaelus/weatherApp.git"
+		"url": "https://github.com/AxothAcaelus/commentapp.git"
 	},
 	"keywords": [
-		"weather",
-		"Utah"
+		"Comments",
+		"MongoDB"
 	],
 	"dependiencies": {},
 	"engines": {
